@@ -1,3 +1,8 @@
+2010-06-02  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* gdb.cp/ref-types.exp (pass, pass, pass): Rename to ...
+	(print value of rUC, print value of rI, print value of UI): ... here.
+
 2010-06-02  Michael Snyder  <msnyder@vmware.com>
 
 	* gdb.trace/actions.exp: Use gdb_test_no_output.
